[package]
authors.workspace = true
edition.workspace = true
name = "runtime-eden"
version.workspace = true

[features]
default = ["std"]
std = [
  "frame-executive/std",
  "frame-support/std",
  "frame-system/std",
  "frame-try-runtime/std",
  "primitives/std",
  "sp-consensus-aura/std",
  "frame-system-rpc-runtime-api/std",
  "pallet-allocations/std",
  "pallet-authority-discovery/std",
  "pallet-authorship/std",
  "pallet-balances/std",
  "pallet-collective/std",
  "pallet-grants/std",
  "pallet-im-online/std",
  "pallet-mandate/std",
  "pallet-membership/std",
  "pallet-multisig/std",
  "pallet-nodle-uniques/std",
  "pallet-sponsorship/std",
  "pallet-offences/std",
  "pallet-insecure-randomness-collective-flip/std",
  "pallet-reserve/std",
  "pallet-scheduler/std",
  "pallet-preimage/std",
  "pallet-proxy/std",
  "pallet-session/std",
  "pallet-timestamp/std",
  "pallet-transaction-payment/std",
  "pallet-transaction-payment-rpc-runtime-api/std",
  "pallet-uniques/std",
  "pallet-utility/std",
  "pallet-aura/std",
  "pallet-collator-selection/std",
  "pallet-contracts/std",
  "pallet-xcm/std",
  "pallet-identity/std",
  "polkadot-parachain-primitives/std",
  "polkadot-runtime-common/std",
  "xcm/std",
  "xcm-builder/std",
  "xcm-executor/std",
  "orml-xtokens/std",
  "orml-traits/std",
  "cumulus-pallet-aura-ext/std",
  "cumulus-pallet-dmp-queue/std",
  "cumulus-pallet-parachain-system/std",
  "cumulus-pallet-xcm/std",
  "cumulus-pallet-xcmp-queue/std",
  "cumulus-primitives-core/std",
  "cumulus-primitives-timestamp/std",
  "cumulus-primitives-utility/std",
  "parachain-info/std",
  "codec/std",
  "safe-mix/std",
  "serde",
  "sp-api/std",
  "sp-application-crypto/std",
  "sp-consensus-babe/std",
  "sp-block-builder/std",
  "sp-core/std",
  "sp-inherents/std",
  "sp-io/std",
  "sp-offchain/std",
  "sp-runtime/std",
  "sp-storage/std",
  "sp-session/std",
  "sp-staking/std",
  "sp-std/std",
  "sp-transaction-pool/std",
  "sp-version/std",
  "sp-npos-elections/std",
  "pallet-xcm-benchmarks/std",
  "pallet-message-queue/std",
  "parachains-common/std"
]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-system-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-allocations/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "pallet-collective/runtime-benchmarks",
  "pallet-grants/runtime-benchmarks",
  "pallet-im-online/runtime-benchmarks",
  "pallet-multisig/runtime-benchmarks",
  "pallet-reserve/runtime-benchmarks",
  "pallet-scheduler/runtime-benchmarks",
  "pallet-preimage/runtime-benchmarks",
  "pallet-proxy/runtime-benchmarks",
  "pallet-timestamp/runtime-benchmarks",
  "pallet-uniques/runtime-benchmarks",
  "pallet-nodle-uniques/runtime-benchmarks",
  "pallet-sponsorship/runtime-benchmarks",
  "pallet-utility/runtime-benchmarks",
  "pallet-collator-selection/runtime-benchmarks",
  "pallet-membership/runtime-benchmarks",
  "pallet-contracts/runtime-benchmarks",
  "pallet-identity/runtime-benchmarks",
  "pallet-xcm/runtime-benchmarks",
  "xcm-builder/runtime-benchmarks",
  "xcm-executor/runtime-benchmarks",
  "pallet-xcm-benchmarks/runtime-benchmarks",
  "cumulus-pallet-xcmp-queue/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "cumulus-pallet-parachain-system/runtime-benchmarks",
  "cumulus-pallet-dmp-queue/runtime-benchmarks",
  "cumulus-primitives-core/runtime-benchmarks",
  "pallet-message-queue/runtime-benchmarks",
  "parachains-common/runtime-benchmarks"
]
try-runtime = [
  "frame-executive/try-runtime",
  "frame-try-runtime",
  "frame-system/try-runtime",
  "frame-support/try-runtime",
  "pallet-allocations/try-runtime",
  "pallet-authority-discovery/try-runtime",
  "pallet-authorship/try-runtime",
  "pallet-balances/try-runtime",
  "pallet-collective/try-runtime",
  "pallet-grants/try-runtime",
  "pallet-im-online/try-runtime",
  "pallet-mandate/try-runtime",
  "pallet-membership/try-runtime",
  "pallet-multisig/try-runtime",
  "pallet-sponsorship/try-runtime",
  "pallet-nodle-uniques/try-runtime",
  "pallet-offences/try-runtime",
  "pallet-insecure-randomness-collective-flip/try-runtime",
  "pallet-reserve/try-runtime",
  "pallet-scheduler/try-runtime",
  "pallet-preimage/try-runtime",
  "pallet-proxy/try-runtime",
  "pallet-session/try-runtime",
  "pallet-timestamp/try-runtime",
  "pallet-transaction-payment/try-runtime",
  "pallet-uniques/try-runtime",
  "pallet-utility/try-runtime",
  "pallet-aura/try-runtime",
  "pallet-collator-selection/try-runtime",
  "pallet-contracts/try-runtime",
  "pallet-identity/try-runtime",
  "cumulus-pallet-aura-ext/try-runtime",
  "cumulus-pallet-dmp-queue/try-runtime",
  "cumulus-pallet-parachain-system/try-runtime",
  "cumulus-pallet-xcm/try-runtime",
  "cumulus-pallet-xcmp-queue/try-runtime",
  "pallet-xcm/try-runtime",
  "parachain-info/try-runtime",
  "orml-xtokens/try-runtime",
  "cumulus-pallet-parachain-system/try-runtime",
  "pallet-message-queue/try-runtime"
]

[dependencies]
static_assertions.workspace = true
getrandom = { workspace = true, features = ["js"] }
safe-mix = { workspace = true, default-features = false }
codec = { workspace = true, default-features = false, features = ["derive"] }
hex-literal.workspace = true
log = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
serde = { workspace = true, optional = true, features = ["derive"] }
smallvec.workspace = true
lazy_static = {workspace = true, default-features = false, features = ["spin_no_std"] }

frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-system-benchmarking = { workspace = true, default-features = false, optional = true }
frame-executive = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
frame-system-rpc-runtime-api = { workspace = true, default-features = false }
pallet-authority-discovery = { workspace = true, default-features = false }
pallet-authorship = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
pallet-message-queue = { workspace = true, default-features = false }
pallet-collective = { workspace = true, default-features = false }
pallet-im-online = { workspace = true, default-features = false }
pallet-membership = { workspace = true, default-features = false }
pallet-multisig = { workspace = true, default-features = false }
pallet-offences = { workspace = true, default-features = false }
pallet-insecure-randomness-collective-flip = { workspace = true, default-features = false }
pallet-scheduler = { workspace = true, default-features = false }
pallet-preimage = { workspace = true, default-features = false }
pallet-proxy = { workspace = true, default-features = false }
pallet-session = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
pallet-transaction-payment = { workspace = true, default-features = false }
pallet-transaction-payment-rpc-runtime-api = { workspace = true, default-features = false }
pallet-uniques = { workspace = true, default-features = false }
pallet-utility = { workspace = true, default-features = false }
pallet-aura = { workspace = true, default-features = false }
pallet-identity = { workspace = true, default-features = false }

cumulus-pallet-xcmp-queue = { workspace = true, default-features = false }
pallet-xcm = { workspace = true, default-features = false }
pallet-xcm-benchmarks = { workspace = true, default-features = false }

pallet-contracts = { workspace = true, default-features = false }

polkadot-parachain-primitives = { workspace = true, default-features = false }
polkadot-runtime-common = { workspace = true, default-features = false }
polkadot-primitives = { workspace = true, default-features = false }

xcm = { workspace = true, default-features = false}
xcm-builder = { workspace = true, default-features = false }
xcm-executor = { workspace = true, default-features = false }
cumulus-pallet-aura-ext = { workspace = true, default-features = false }
cumulus-pallet-dmp-queue = { workspace = true, default-features = false }
cumulus-pallet-parachain-system = { workspace = true, default-features = false }
cumulus-pallet-xcm = { workspace = true, default-features = false }
pallet-collator-selection = { workspace = true, default-features = false }
parachains-common = { workspace = true, default-features = false }
cumulus-primitives-core = { workspace = true, default-features = false }
cumulus-primitives-timestamp = { workspace = true, default-features = false }
cumulus-primitives-utility = { workspace = true, default-features = false }
parachain-info = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sp-application-crypto = { workspace = true, default-features = false }
sp-consensus-babe = { workspace = true, default-features = false }
sp-block-builder = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-inherents = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-offchain = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-storage = { workspace = true, default-features = false }
sp-session = { workspace = true, default-features = false }
sp-staking = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-transaction-pool = { workspace = true, default-features = false }
sp-version = { workspace = true, default-features = false }
sp-npos-elections = { workspace = true, default-features = false }
sp-consensus-aura = { workspace = true, default-features = false }
frame-try-runtime = { workspace = true, default-features = false, optional = true }
primitives = { default-features = false, path = "../../primitives" }
pallet-allocations = { default-features = false, path = "../../pallets/allocations" }
pallet-reserve = { default-features = false, path = "../../pallets/reserve" }
pallet-grants = { default-features = false, path = "../../pallets/grants" }
pallet-mandate = { default-features = false, path = "../../pallets/mandate" }
pallet-sponsorship = { default-features = false, path = "../../pallets/sponsorship" }
pallet-nodle-uniques = { default-features = false, path = "../../pallets/uniques" }

orml-xtokens = { workspace = true, default-features = false }
orml-traits = { workspace = true, default-features = false }

[build-dependencies]
substrate-wasm-builder.workspace = true
